---
source: src/test.rs
expression: evaluate_example(path)
input_file: tests/literals.nu
---
==== COMPILER ====
0: True (1 to 5)
1: Null (6 to 10)
2: Int (11 to 12) "1"
3: String (13 to 16) "abc"
4: String (17 to 22) ""foo""
5: List(ListId(0)) (0 to 22) - sub_nodes: 0,1,2,3,4
6: Block(BlockId(0)) (0 to 24) - sub_nodes: 5
==== SCOPE ====
0: Frame Scope, node_id: NodeId(6) (empty)
==== TYPES ====
0: bool
1: nothing
2: int
3: string
4: string
5: list<any>
6: list<any>
==== IR ====
register_count: 0
file_count: 0
==== IR ERRORS ====
Error (NodeId 5): node List(ListId(0)) not suported yet

